syntax = "proto3";

package pet.common;

import "google/type/date.proto";

message PetData {
  string name = 1;
  google.type.Date date_of_birth = 2;
}

message Pet {
  int64 id = 1;
  PetData data = 2;
}
